After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751914 - dashdemux: wrong segment duration computed by gst_mpd_client_setup_representation
dashdemux: wrong segment duration computed by gst_mpd_client_setup_representa...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other All
: Normal normal
: 1.5.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-07-03 15:58 UTC by Florin Apostol
Modified: 2015-08-16 13:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed patch (1.16 KB, patch)
2015-07-03 16:01 UTC, Florin Apostol
committed Details | Review

Description Florin Apostol 2015-07-03 15:58:58 UTC
similar with https://bugzilla.gnome.org/show_bug.cgi?id=751449:
segment start and duration is not correctly set.

      /* here we should have a single segment for each representation, whose URL is encoded in the baseURL element */
      if (!gst_mpd_client_add_media_segment (stream, NULL, 1, 0, 0,
              PeriodEnd, PeriodStart, PeriodEnd)) {
        return FALSE;
      }

should be 
      if (!gst_mpd_client_add_media_segment (stream, NULL, 1, 0, 0,
              PeriodEnd - PeriodStart, PeriodStart, PeriodEnd - PeriodStart)) {
Comment 1 Florin Apostol 2015-07-03 16:01:07 UTC
Created attachment 306728 [details] [review]
proposed patch
Comment 2 Thiago Sousa Santos 2015-07-05 19:54:47 UTC
commit 8e82129875e422d4a17e0c655879d263cbd3eac2
Author: Florin Apostol <florin.apostol@oregan.net>
Date:   Fri Jul 3 17:00:31 2015 +0100

    dashdemux: wrong segment duration computed by gst_mpd_client_setup_representation
    
    Corrected computation of segment start and duration.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=751914