dashdemux: wrong segment duration computed by gst_mpd_client_setup_representation

Corrected computation of segment start and duration.

https://bugzilla.gnome.org/show_bug.cgi?id=751914